src/test/deca/context/valid/created/class-method.deca
//Description :
// Test d'une déclaration de méthode dans une classe
//
// Resultats :
// 


class Premiere {

    void affiche() {
        print("Yo");
    }
}

{}
